data/derived/fa15/progs/unify/prog1734.ml.out
Characters 115-131:
  |x when x>=10->(x/10)::((x mod 10)+(mulByDigit i t))
                                     ^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
